--- a/core/presentation/designsystem/src/main/res/values/dimens.xml
+++ b/core/presentation/designsystem/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
 <resources>
     <dimen name="small_padding">8dp</dimen>
     <dimen name="xs_padding">4dp</dimen>
+    <dimen name="m_padding">12dp</dimen>
+    <dimen name="l_padding">16dp</dimen>
     <dimen name="medium_padding">12dp</dimen>
     <dimen name="rounded_border">16dp</dimen>
     <dimen name="border_width_small">1dp</dimen>
